--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-pillow
-PyAudioWPatch
-python-osc
-customtkinter
-deepl
-flashtext
-pyyaml
-python-i18n
+pillow == 10.0.0
+PyAudioWPatch == 0.2.12.6
+python-osc == 1.8.3
+customtkinter == 5.2.0
+deepl == 1.15.0
+flashtext == 2.7
+pyyaml == 6.0.1
+python-i18n == 0.3.9
