--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ flashtext == 2.7
 pyyaml == 6.0.1
 python-i18n == 0.3.9
 CTkToolTip == 0.8
+transformers[torch]
+sentencepiece==0.1.99
+ctranslate2==3.21.0
