--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ transformers[torch]==4.37.2
 sentencepiece==0.1.99
 ctranslate2==3.24.0
 faster-whisper==0.10.0
+openvr==1.26.701
 translators @ git+https://github.com/misyaguziya/translators@5.8.9
 SpeechRecognition @ git+https://github.com/misyaguziya/custom_speech_recognition@3.10.2
 tinyoscquery @ git+https://github.com/cyberkitsune/tinyoscquery@0.1.2
