--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "tauri-app"
+name = "VRCT"
 version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "VRCT Application"
+authors = ["misyaguziya"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
