--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pyyaml == 6.0.1
 python-i18n == 0.3.9
 CTkToolTip == 0.8
 pyinstaller==6.2.0
+numpy==1.26.4
 torch==2.2.2
 transformers==4.37.2
 sentencepiece==0.1.99
