--- a/requirements_cuda.txt
+++ b/requirements_cuda.txt
@@ -1,4 +1,5 @@
 torch==2.2.2
+--extra-index-url https://download.pytorch.org/whl/cu121
 faster-whisper==1.0.3
 ctranslate2==4.3.1
 transformers==4.40.2
