--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.0",
-    "@tauri-apps/api": "^1",
+    "@tauri-apps/api": "1.6.0",
+    "@vitejs/plugin-react": "4.3.4",
     "clsx": "^2.1.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
@@ -40,11 +41,10 @@
     "react-resizable-layout": "^0.7.2"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.14",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@tauri-apps/cli": "1.6.3",
     "npm-run-all": "^4.1.5",
     "sass": "^1.77.4",
-    "vite": "^5.0.0",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite": "6.0.3",
+    "vite-plugin-svgr": "4.3.0"
   }
 }
