--- a/package.json
+++ b/package.json
@@ -23,27 +23,27 @@
     "release-all": "npm run build && npm run release && npm run build-cuda && npm run release-cuda"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.2.0",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@mui/material": "6.2.0",
     "@tauri-apps/api": "1.6.0",
     "@vitejs/plugin-react": "4.3.4",
-    "clsx": "^2.1.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.2",
-    "i18next": "^23.11.5",
-    "jotai": "^2.8.3",
-    "js-base64": "^3.7.7",
-    "js-yaml": "^4.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^15.1.1",
-    "react-resizable-layout": "^0.7.2"
+    "clsx": "2.1.1",
+    "eslint": "8.57.0",
+    "eslint-plugin-react": "7.37.2",
+    "i18next": "24.1.0",
+    "jotai": "2.10.3",
+    "js-base64": "3.7.7",
+    "js-yaml": "4.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-i18next": "15.2.0",
+    "react-resizable-layout": "0.7.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "1.6.3",
-    "npm-run-all": "^4.1.5",
-    "sass": "^1.77.4",
+    "npm-run-all": "4.1.5",
+    "sass": "1.79.4",
     "vite": "6.0.3",
     "vite-plugin-svgr": "4.3.0"
   }
