--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,13 +1,13 @@
 # These are supported funding model platforms
 
 github: [misyaguziya]
-patreon: # Replace with a single Patreon username
+patreon: vrct_dev
 open_collective: # Replace with a single Open Collective username
-ko_fi: # Replace with a single Ko-fi username
+ko_fi: vrct_dev
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
 polar: # Replace with a single Polar username
-custom: ["https://misyaguziya.booth.pm/", "https://vrct-dev.fanbox.cc/"]
+custom: ["https://misyaguziya.booth.pm", "https://vrct-dev.fanbox.cc"]
