--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "dev-ui": "npm-run-all --parallel vite tauri-dev",
     "build": "npm run build-python && npm run vite-build && npm run tauri build",
     "build-cuda": "npm run build-python-cuda && npm run vite-build && npm run tauri build",
-    "build-ui": "npm run vite-build && npm run tauri build",
-    "release": "python zip.py --zip_name VRCT.zip",
-    "release-cuda": "python zip.py --zip_name VRCT_cuda.zip",
-    "release-all": "npm run build && npm run release && npm run build-cuda && npm run release-cuda"
+    "release": "npm run build && python zip.py --zip_name VRCT.zip",
+    "release-cuda": "npm run build-cuda && python zip.py --zip_name VRCT_cuda.zip",
+    "release-all": "npm run release && npm run release-cuda"
   },
   "dependencies": {
     "@emotion/react": "11.14.0",
