👍️[Update] Build : ビルド時に不要なファイルを削除する処理を追加

--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "vite-preview": "vite preview",
     "tauri": "tauri",
     "tauri-dev": "tauri dev",
+    "clean": "python clean.py",
     "dev": "npm run build-python && npm run dev-ui",
     "dev-cuda": "npm run build-python-cuda && npm run dev-ui",
     "dev-ui": "npm-run-all --parallel vite tauri-dev",
-    "build": "npm run build-python && npm run vite-build && npm run tauri build",
-    "build-cuda": "npm run build-python-cuda && npm run vite-build && npm run tauri build",
+    "build": "npm run clean && npm run build-python && npm run vite-build && npm run tauri build",
+    "build-cuda": "npm run clean && npm run build-python-cuda && npm run vite-build && npm run tauri build",
     "release": "npm run build && python zip.py --zip_name VRCT.zip",
     "release-cuda": "npm run build-cuda && python zip.py --zip_name VRCT_cuda.zip",
     "release-all": "npm run release && npm run release-cuda"
