--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "release-all": "npm run release && npm run release-cuda"
   },
   "dependencies": {
+    "@babel/standalone": "^7.26.9",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
     "@mui/material": "6.2.0",
@@ -35,6 +36,7 @@
     "jotai": "2.10.3",
     "js-base64": "3.7.7",
     "js-yaml": "4.1.0",
+    "jszip": "^3.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "15.2.0",
