--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "release-all": "npm run release && npm run release-cuda"
   },
   "dependencies": {
-    "@babel/standalone": "^7.26.9",
+    "@babel/standalone": "7.26.9",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
     "@mui/material": "6.2.0",
@@ -36,17 +36,18 @@
     "jotai": "2.10.3",
     "js-base64": "3.7.7",
     "js-yaml": "4.1.0",
-    "jszip": "^3.10.1",
+    "jszip": "3.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "15.2.0",
-    "react-resizable-layout": "0.7.2"
+    "react-resizable-layout": "0.7.2",
+    "semver": "7.7.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "1.6.3",
     "npm-run-all": "4.1.5",
     "sass": "1.79.4",
-    "vite": "6.0.3",
+    "vite": "6.2.1",
     "vite-plugin-svgr": "4.3.0"
   }
 }
