--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jszip": "3.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "5.0.0",
     "react-i18next": "15.2.0",
     "react-resizable-layout": "0.7.2",
     "semver": "7.7.1"
@@ -47,7 +48,8 @@
     "@tauri-apps/cli": "1.6.3",
     "npm-run-all": "4.1.5",
     "sass": "1.79.4",
-    "vite": "6.2.1",
+    "source-map": "0.7.4",
+    "vite": "6.2.5",
     "vite-plugin-svgr": "4.3.0"
   }
 }
