--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "i18next": "24.1.0",
     "jotai": "2.10.3",
     "js-base64": "3.7.7",
-    "js-yaml": "4.1.0",
     "jszip": "3.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -45,6 +44,7 @@
     "semver": "7.7.1"
   },
   "devDependencies": {
+    "@rollup/plugin-yaml": "^4.1.2",
     "@tauri-apps/cli": "1.6.3",
     "npm-run-all": "4.1.5",
     "sass": "1.79.4",
