--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,19 +7,27 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+# The `_lib` suffix may seem redundant but it is necessary
+# to make the lib name unique and wouldn't conflict with the bin name.
+# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
+name = "vrct_lib"
+crate-type = ["staticlib", "cdylib", "rlib"]
+
 [build-dependencies]
-tauri-build = { version = "1", features = [] }
+tauri-build = { version = "=2.2.0", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "fs-remove-dir", "fs-read-file", "fs-create-dir", "fs-write-file", "fs-exists", "http-request", "fs-read-dir", "window-hide", "window-set-focus", "global-shortcut-all", "window-set-size", "window-set-position", "window-unmaximize", "window-close", "window-maximize", "window-minimize", "window-unminimize", "window-start-dragging", "window-set-decorations", "window-set-always-on-top", "shell-sidecar", "shell-open", "devtools"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-font-kit = "0.14.2"
-window-shadows = { git = "https://github.com/tauri-apps/window-shadows.git" }
-reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
-base64 = "0.22.1"
+tauri = { version = "=2.5.1", features = ["devtools"] }
+tauri-plugin-opener = "=2.2.6"
+serde = { version = "=1.0.219", features = ["derive"] }
+serde_json = "=1.0.140"
+tauri-plugin-fs = "=2.2.1"
+tauri-plugin-http = "=2.4.3"
+tauri-plugin-shell = "2.2.1"
+font-kit = "=0.14.2"
+reqwest = "=0.12.15"
+base64 = "=0.22.1"
 
-
-[features]
-# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
-custom-protocol = ["tauri/custom-protocol"]
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-global-shortcut = "=2.2.0"
