--- a/requirements_cuda.txt
+++ b/requirements_cuda.txt
@@ -16,6 +16,7 @@ pydub==0.25.1
 psutil==5.9.8
 pykakasi==2.3.0
 pycaw==20240210
+websockets==15.0.1
 translators @ git+https://github.com/misyaguziya/translators@5.9.2.1
 SpeechRecognition @ git+https://github.com/misyaguziya/custom_speech_recognition@3.10.4.1
 tinyoscquery @ git+https://github.com/cyberkitsune/tinyoscquery@0.1.3
