--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,8 @@ psutil==5.9.8
 pykakasi==2.3.0
 pycaw==20240210
 websockets==15.0.1
-huggingface-hub==0.31.2
-hf-xet==1.1.2
+huggingface_hub[hf-xet]
+setuptools==80.8.0
 translators @ git+https://github.com/misyaguziya/translators@5.9.2.1
 SpeechRecognition @ git+https://github.com/misyaguziya/custom_speech_recognition@3.10.4.1
 tinyoscquery @ git+https://github.com/cyberkitsune/tinyoscquery@0.1.3
