--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,8 +57,8 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           pip install huggingface_hub
-          huggingface-cli upload misyaguziya/VRCT VRCT.zip VRCT.zip --repo-type dataset --commit-message "👍️[Update] ${{ env.VERSION }} Release"
-          huggingface-cli upload misyaguziya/VRCT VRCT_cuda.zip VRCT_cuda.zip --repo-type dataset --commit-message "👍️[Update] ${{ env.VERSION }} Release"
+          huggingface-cli upload ms-software/VRCT VRCT.zip VRCT.zip --repo-type dataset --commit-message "👍️[Update] ${{ env.VERSION }} Release"
+          huggingface-cli upload ms-software/VRCT VRCT_cuda.zip VRCT_cuda.zip --repo-type dataset --commit-message "👍️[Update] ${{ env.VERSION }} Release"
 
       - name: Create GitHub Release
         id: create_release
@@ -67,7 +67,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          release_name: ${{ env.VERSION }}
           draft: false
           prerelease: false
 
