[Update] package.json: Add task-kill script to terminate VRCT-sidecar.exe before development builds [Add] task_kill.py: Implement script to forcefully terminate VRCT-sidecar.exe

--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "vite-preview": "vite preview",
     "tauri": "tauri",
     "tauri-dev": "tauri dev",
+    "task-kill": "python task_kill.py",
     "clean": "python clean.py",
-    "dev": "npm run build-python && npm run dev-ui",
-    "dev-cuda": "npm run build-python-cuda && npm run dev-ui",
+    "dev": "npm run task-kill && npm run build-python && npm run dev-ui",
+    "dev-cuda": "npm run task-kill && npm run build-python-cuda && npm run dev-ui",
     "dev-ui": "npm-run-all --parallel vite tauri-dev",
     "build": "npm run clean && npm run build-python && npm run vite-build && npm run tauri build",
     "build-cuda": "npm run clean && npm run build-python-cuda && npm run vite-build && npm run tauri build",
