--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,8 @@ websockets==15.0.1
 huggingface_hub==0.32.2
 hf-xet==1.1.2
 setuptools==80.8.0
-SudachiPy==0.6.10
-SudachiDict-core==20250825
-SudachiDict-full==20250825
+ginza==5.2.0
+ja-ginza==5.2.0
 translators @ git+https://github.com/misyaguziya/translators@5.9.2.1
 SpeechRecognition @ git+https://github.com/misyaguziya/custom_speech_recognition@3.10.4.1
 tinyoscquery @ git+https://github.com/cyberkitsune/tinyoscquery@0.1.3
