翻訳バックエンドを拡張・リファクタリング：OpenAI/Plamo/Gemini クライアントを追加・改修し、プロンプトを YAML から読み込むように変更。各クライアントでモデル一覧取得・認証・クライアント更新機能を実装し、Translator/Model 層の対応メソッドを追加。Controller と mainloop にプラモ・ジェミニ・OpenAI の認証/モデル操作エンドポイントを追加・整備。config のモデル/API設定をプロパティ化して既定値を None に変更し、選択肢リストを初期化。translation_languages に OpenAI 用マッピングを追加。requirements ファイルの依存記述を調整。

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ hf-xet==1.1.2
 setuptools==80.8.0
 langchain-openai==0.3.32
 langchain-google-genai==2.1.10
+google-genai==1.45.0
+grpcio==1.67.1
 SudachiPy==0.6.10
 SudachiDict-core==20250825
 SudachiDict-full==20250825
