--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ langchain-openai==0.3.32
 langchain-google-genai==2.1.10
 google-genai==1.45.0
 grpcio==1.67.1
+langchain-ollama==0.3.10
 SudachiPy==0.6.10
 SudachiDict-core==20250825
 SudachiDict-full==20250825
