--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ transformers==4.40.2
 pillow == 10.0.0
 PyAudioWPatch == 0.2.12.6
 python-osc == 1.9.0
+PyYAML==6.0.2
 deepl == 1.22.0
 flashtext ==2.7
 pyinstaller==6.10.0
