[Update] Build scripts and configuration: Added new build and install scripts, updated versioning in config files, and improved project structure.

--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "version": "3.3.2",
   "type": "module",
   "scripts": {
-    "setup-python": "install.bat",
-    "build-python": "build.bat",
-    "build-python-cuda": "build_cuda.bat",
+    "setup-python": "bat\\install.bat",
+    "build-python": "bat\\build.bat",
+    "build-python-cuda": "bat\\build_cuda.bat",
     "vite": "vite",
     "vite-build": "vite build",
     "vite-preview": "vite preview",
     "tauri": "tauri",
     "tauri-dev": "tauri dev",
-    "task-kill": "python task_kill.py",
-    "clean": "python clean.py",
-    "update-version": "python update_version.py",
+    "task-kill": "python utils\\task_kill.py",
+    "clean": "python utils\\clean.py",
+    "update-version": "python utils\\update_version.py",
     "dev": "npm run task-kill && npm run clean && npm run update-version && npm run build-python && npm run dev-ui",
     "dev-cuda": "npm run task-kill && npm run clean && npm run update-version && npm run build-python-cuda && npm run dev-ui",
     "dev-ui": "npm run task-kill && npm-run-all --parallel vite tauri-dev",
     "build": "npm run task-kill && npm run clean && npm run update-version && npm run build-python && npm run vite-build && npm run tauri build",
     "build-cuda": "npm run task-kill && npm run clean && npm run update-version && npm run build-python-cuda && npm run vite-build && npm run tauri build",
-    "release": "npm run update-version && npm run build && python zip.py --zip_name VRCT.zip",
-    "release-cuda": "npm run update-version && npm run build-cuda && python zip.py --zip_name VRCT_cuda.zip",
+    "release": "npm run update-version && npm run build && python utils\\zip.py --zip_name VRCT.zip",
+    "release-cuda": "npm run update-version && npm run build-cuda && python utils\\zip.py --zip_name VRCT_cuda.zip",
     "release-all": "npm run update-version && npm run release && npm run release-cuda"
   },
   "dependencies": {
