--- a/requirements_cuda.txt
+++ b/requirements_cuda.txt
@@ -31,3 +31,4 @@ SudachiDict-full==20250825
 translators @ git+https://github.com/misyaguziya/translators@5.9.2.1
 SpeechRecognition @ git+https://github.com/misyaguziya/custom_speech_recognition@3.10.4.1
 tinyoscquery @ git+https://github.com/cyberkitsune/tinyoscquery@0.1.3
+aptabase==0.1.0
