--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,4 @@ translators @ git+https://github.com/misyaguziya/translators@5.9.2.1
 SpeechRecognition @ git+https://github.com/misyaguziya/custom_speech_recognition@3.10.4.1
 tinyoscquery @ git+https://github.com/cyberkitsune/tinyoscquery@0.1.3
 aptabase==0.1.0
+PyAutoGUI==0.9.54
