--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "js-base64": "3.7.7",
     "jszip": "3.10.1",
     "react": "18.3.1",
+    "react-colorful": "5.6.1",
     "react-dom": "18.3.1",
     "react-error-boundary": "5.0.0",
     "react-i18next": "15.5.1",
